crates/test-files/fixtures/compile_errors/invalid_msg_field.fe
contract Foo {
    pub fn foo() {
        msg.foo
    }
}
